# lisa

./: .gitignore  README.md  Vagrantfile  circle.yml  core.launch  default.rviz  dev.launch  edison.yaml  setup.py  waypoints_loader.py
devel/: _setup_util.py  setup.sh
etc/: roscore
nodes/drivetrain/: README.md  esc_driver.go  main.go  steering_driver.go
nodes/hal/: hal.go  sample_waypoints.json  sample_waypoints.yaml
src/lisa/: CMakeLists.txt  package.xml
src/lisa/data/: sparkfun.map
src/lisa/msg/: OdometrySensor.msg  ackermann.msg
src/lisa/src/: buttons.py  hal.py  hello.cpp  imu.py  imu_simulator.cpp  localizer.cpp  navigator.cpp  occupancy_map.cpp  sensor_simulator.cpp  simulation.h  subpose.cpp  teleop_key.cpp  waypoint_manager.cpp  wheel_encoder.py  wheel_encoder_simulator.cpp
src/lisa/src/test/: main.go
systemd/: roscore.service
waypoints/: sparkfun-avc-2016.yaml  test-square.yaml
